--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-    <title>Raspored Sati</title>
+    <title>e-Raspored</title>
 </head>
 <body id="root">
 <noscript>You need to enable JavaScript to run this app.</noscript>
